# rust-py-comp

./: Cargo.toml  Changelog.md  Readme.md
src/: lib.rs
tests/: test.rs
tests/test_if_chains/: mod.rs  test_initial_if_in_final_for.rs  test_initial_if_in_non_final_for.rs  test_initial_if_let_in_final_for.rs  test_initial_if_let_in_non_final_for.rs
